--- a/a3_caseyhon.bib
+++ b/a3_caseyhon.bib
@@ -1,85 +1,47 @@
-@Manual{R-Biobase,
-  title = {Biobase: Base functions for Bioconductor},
-  author = {R. Gentleman and V. Carey and M. Morgan and S. Falcon},
-  year = {2020},
-  note = {R package version 2.50.0},
-  url = {https://bioconductor.org/packages/Biobase},
-}
-
-@Manual{R-BiocManager,
-  title = {BiocManager: Access the Bioconductor Project Package Repository},
-  author = {Martin Morgan},
+@Manual{R-ggrepel,
+  title = {ggrepel: Automatically Position Non-Overlapping Text Labels with
+ggplot2},
+  author = {Kamil Slowikowski},
   year = {2021},
-  note = {R package version 1.30.16},
-  url = {https://CRAN.R-project.org/package=BiocManager},
+  note = {R package version 0.9.1},
+  url = {https://github.com/slowkow/ggrepel},
 }
 
-@Manual{R-fgsea,
-  title = {fgsea: Fast Gene Set Enrichment Analysis},
-  author = {Gennady Korotkevich and Vladimir Sukhov and Alexey Sergushichev},
-  year = {2020},
-  note = {R package version 1.14.0},
-  url = {https://github.com/ctlab/fgsea/},
-}
-
-@Manual{R-RCurl,
-  title = {RCurl: General Network (HTTP/FTP/...) Client Interface for R},
-  author = {Duncan {Temple Lang}},
+@Manual{R-GSA,
+  title = {GSA: Gene Set Analysis},
+  author = {Brad Efron and R. Tibshirani},
   year = {2022},
-  note = {R package version 1.98-1.6},
-  url = {https://CRAN.R-project.org/package=RCurl},
+  note = {R package version 1.03.2},
+  url = {http://www-stat.stanford.edu/~tibs/GSA},
 }
 
-@Article{Biobase2015,
-  author = {W. Huber and V. J. Carey and R. Gentleman and S. Anders and M. Carlson and B. S. Carvalho and H. C. Bravo and S. Davis and L. Gatto and T. Girke and R. Gottardo and F. Hahne and K. D. Hansen and R. A. Irizarry and M. Lawrence and M. I. Love and J. MacDonald and V. Obenchain and A. K. {Ole's} and H. {Pag`es} and A. Reyes and P. Shannon and G. K. Smyth and D. Tenenbaum and L. Waldron and M. Morgan},
-  title = {{O}rchestrating high-throughput genomic analysis with {B}ioconductor},
-  journal = {Nature Methods},
+@Manual{R-knitr,
+  title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
+  author = {Yihui Xie},
+  year = {2021},
+  note = {R package version 1.37},
+  url = {https://yihui.org/knitr/},
+}
+
+@Book{knitr2015,
+  title = {Dynamic Documents with {R} and knitr},
+  author = {Yihui Xie},
+  publisher = {Chapman and Hall/CRC},
+  address = {Boca Raton, Florida},
   year = {2015},
-  volume = {12},
-  number = {2},
-  pages = {115--121},
-  url = {http://www.nature.com/nmeth/journal/v12/n2/full/nmeth.3252.html},
+  edition = {2nd},
+  note = {ISBN 978-1498716963},
+  url = {https://yihui.org/knitr/},
 }
 
-@Article{fgsea2019,
-  author = {Gennady Korotkevich and Vladimir Sukhov and Alexey Sergushichev},
-  title = {Fast gene set enrichment analysis},
-  year = {2019},
-  doi = {10.1101/060012},
-  publisher = {Cold Spring Harbor Labs Journals},
-  url = {http://biorxiv.org/content/early/2016/06/20/060012},
-  journal = {bioRxiv},
+@InCollection{knitr2014,
+  booktitle = {Implementing Reproducible Computational Research},
+  editor = {Victoria Stodden and Friedrich Leisch and Roger D. Peng},
+  title = {knitr: A Comprehensive Tool for Reproducible Research in {R}},
+  author = {Yihui Xie},
+  publisher = {Chapman and Hall/CRC},
+  year = {2014},
+  note = {ISBN 978-1466561595},
+  url = {http://www.crcpress.com/product/isbn/9781466561595},
 }
 
-@article{merico2010enrichment,
-  title={Enrichment map: a network-based method for gene-set enrichment visualization and interpretation},
-  author={Merico, Daniele and Isserlin, Ruth and Stueker, Oliver and Emili, Andrew and Bader, Gary D},
-  journal={PloS one},
-  volume={5},
-  number={11},
-  pages={e13984},
-  year={2010},
-  publisher={Public Library of Science San Francisco, USA}
-}
-
-@article{subramanian2005gene,
-  title={Gene set enrichment analysis: a knowledge-based approach for interpreting genome-wide expression profiles},
-  author={Subramanian, Aravind and Tamayo, Pablo and Mootha, Vamsi K and Mukherjee, Sayan and Ebert, Benjamin L and Gillette, Michael A and Paulovich, Amanda and Pomeroy, Scott L and Golub, Todd R and Lander, Eric S and others},
-  journal={Proceedings of the National Academy of Sciences},
-  volume={102},
-  number={43},
-  pages={15545--15550},
-  year={2005},
-  publisher={National Acad Sciences}
-}
-
-@article{mootha2003pgc,
-  title={PGC-1$\alpha$-responsive genes involved in oxidative phosphorylation are coordinately downregulated in human diabetes},
-  author={Mootha, Vamsi K and Lindgren, Cecilia M and Eriksson, Karl-Fredrik and Subramanian, Aravind and Sihag, Smita and Lehar, Joseph and Puigserver, Pere and Carlsson, Emma and Ridderstr{\aa}le, Martin and Laurila, Esa and others},
-  journal={Nature genetics},
-  volume={34},
-  number={3},
-  pages={267--273},
-  year={2003},
-  publisher={Nature Publishing Group}
-}
